--- a/views/grammar.ejs
+++ b/views/grammar.ejs
@@ -12,10 +12,10 @@
     border-right: 1px solid #ccc;
     height: 500px;
     overflow-y: auto;
-    scrollbar-width: none;           /* Firefox */
+    scrollbar-width: none;        
   }
 
-  .box2::-webkit-scrollbar {         /* Chrome, Safari, Edge */
+  .box2::-webkit-scrollbar {         
     display: none;
   }
 
