--- a/public/css/styleMainvoca.css
+++ b/public/css/styleMainvoca.css
@@ -2,24 +2,21 @@
      .container {
       display: flex;
       gap: 20px;
-      margin-top: 10px;
-      margin-left: 50px;
       
     }
 
     .left-box {
-      flex: 2;
+      flex: 2;                                         /* Chiếm gấp đôi chiều rộng so với right-column. */
       color: rgb(14, 14, 14);
       border-radius: 10px;
       font-size: 20px;
-      min-height: 300px;
+      max-height: 600px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
       background:#fff;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       padding-top: 10px;
       padding-left: 50px ;
-
       margin-left: 80px;
     }
 h1 {
@@ -33,9 +30,9 @@ h1 {
     }
 
     .right-column {
-      flex: 1;
+      flex: 1;                                         /* Chiếm 1 phần chiều rộng so với left-box. */
       display: flex;
-      flex-direction: column;
+      flex-direction: column;                          /* Xếp các .right-box xuống dưới nhau.  */
       gap: 20px;
     }
 
@@ -48,12 +45,11 @@ h1 {
       border-radius: 10px;
       font-size: 16px;
       box-shadow: 0 4px 6px rgba(0,0,0,0.15);
+      
     }
-    .right-box a:visited {
+.right-box a {
   color: #f4f5f6;
-  text-decoration: none;
 }
-      .right-box a:hover {
+.right-box a:hover {
   color: #054381;
-  text-decoration: none;
 }
