--- a/views/main.ejs
+++ b/views/main.ejs
@@ -51,7 +51,7 @@
             <h1 >Learn English for the TOEIC</h1>
             <p>Improve your skills with our practice exercises and mock exams.</p>
            
-          <div class="features hidden"  id="boxSection" >
+          <div class="features" >
             <a href="/grammar" >
               <div class="feature-box">
                 <img src="https://img.icons8.com/ios-filled/50/9fa8da/combo-chart--v1.png" alt="Practice">
